--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/4. Inheritance_Strategy.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/4. Inheritance_Strategy.md
@@ -1,5 +1,5 @@
 # Inheritance Strategy in Entity Framework 6
-We have seen in the ![Code-First Conventions](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) section that EF creates database tables for each concrete domain class. However, you can design your domain classes using inheritance. Object-oriented techniques include "has a" and "is a" relationships, whereas SQL-based relational model has only a "has a" relationship between tables. SQL database management systems don't support type inheritance. So, how would you map object-oriented domain classes with the relational database?
+We have seen in the [Code-First Conventions](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) section that EF creates database tables for each concrete domain class. However, you can design your domain classes using inheritance. Object-oriented techniques include "has a" and "is a" relationships, whereas SQL-based relational model has only a "has a" relationship between tables. SQL database management systems don't support type inheritance. So, how would you map object-oriented domain classes with the relational database?
 
 Below are three different approaches to represent an inheritance hierarchy in Code-First:
 1. **Table per Hierarchy (TPH):** This approach suggests one table for the entire class inheritance hierarchy. The table includes a discriminator column which distinguishes between inheritance classes. This is a default inheritance mapping strategy in Entity Framework.
@@ -7,18 +7,18 @@ Below are three different approaches to represent an inheritance hierarchy in Co
 3. **Table per Concrete Class (TPC):** This approach suggests one table for one concrete class, but not for the abstract class. So, if you inherit the abstract class in multiple concrete classes, then the properties of the abstract class will be part of each table of the concrete class.
 
 We are not going into detail here. Visit the following reference links for more detailed information:
-1. ![Inheritance with EF Code First: Table per Hierarchy (TPH)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-1-table-per-hierarchy-tph)
-2. ![Inheritance with EF Code First: Table per Type (TPT)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-2-table-per-type-tpt)
-3. ![Inheritance with EF Code First: Table per Concrete class (TPC)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-3-table-per-concrete-type-tpc-and-choosing-strategy-guidelines)
+1. [Inheritance with EF Code First: Table per Hierarchy (TPH)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-1-table-per-hierarchy-tph)
+2. [Inheritance with EF Code First: Table per Type (TPT)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-2-table-per-type-tpt)
+3. [Inheritance with EF Code First: Table per Concrete class (TPC)](https://weblogs.asp.net/manavi/inheritance-mapping-strategies-with-entity-framework-code-first-ctp5-part-3-table-per-concrete-type-tpc-and-choosing-strategy-guidelines)
 
 
 # Configure Domain Classes in Entity Framework 6
-We learned default ![Code-First Conventions](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) in the previous section. Code-First builds the conceptual model from your domain classes using default conventions. EF 6 Code-First leverages a programming pattern referred to as convention over configuration. However, you can override these conventions by configuring your domain classes to provide EF with the information it needs. There are two ways to configure your domain classes:
+We learned default [Code-First Conventions](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) in the previous section. Code-First builds the conceptual model from your domain classes using default conventions. EF 6 Code-First leverages a programming pattern referred to as convention over configuration. However, you can override these conventions by configuring your domain classes to provide EF with the information it needs. There are two ways to configure your domain classes:
 1. Data Annotation Attributes
 2. Fluent API
 
 ## Data Annotations Attributes
-Data Annotations is a simple attribute based configuration, which you can apply to your domain classes and its properties. These attributes are not only for EF but also used in ASP.NET web form or MVC and so, included in a separate namespace ![System.ComponentModel.DataAnnotations](https://learn.microsoft.com/en-us/dotnet/api/system.componentmodel.dataannotations?redirectedfrom=MSDN&view=net-7.0).
+Data Annotations is a simple attribute based configuration, which you can apply to your domain classes and its properties. These attributes are not only for EF but also used in ASP.NET web form or MVC and so, included in a separate namespace [System.ComponentModel.DataAnnotations](https://learn.microsoft.com/en-us/dotnet/api/system.componentmodel.dataannotations?redirectedfrom=MSDN&view=net-7.0).
 
 The following example demonstrates the use of some data annotation attributes:
 
@@ -48,7 +48,7 @@ public class Student
 **Note:** Data annotation attributes do not support all the configuration options for Entity Framework. So, you can use Fluent API, which provides all the configuration options for EF.
 
 ## Fluent API
-Another way to configure domain classes is by using Entity Framework Fluent API. EF Fluent API is based on a Fluent API design pattern (a.k.a ![Fluent Interface](https://en.wikipedia.org/wiki/Fluent_interface)) where the result is formulated by ![method chaining](https://en.wikipedia.org/wiki/Method_chaining).
+Another way to configure domain classes is by using Entity Framework Fluent API. EF Fluent API is based on a Fluent API design pattern (a.k.a [Fluent Interface](https://en.wikipedia.org/wiki/Fluent_interface)) where the result is formulated by [method chaining](https://en.wikipedia.org/wiki/Method_chaining).
 
 Fluent API configuration can be applied when EF builds a model from your domain classes. You can inject the Fluent API configurations by overriding the `OnModelCreating` method of `DbContext` in Entity Framework 6.x, as shown below:
 
