--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/5. Data_Anotations_Attributes.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/5. Data_Anotations_Attributes.md
@@ -5,7 +5,7 @@ Data annotation attributes are included in the `System.ComponentModel.DataAnnota
 
 These data annotation attributes work in the same way in EF 6 and EF Core and are valid in both.
 
-**Note:** Data annotations only give you a subset of configuration options. ![Fluent API](https://www.entityframeworktutorial.net/code-first/fluent-api-in-code-first.aspx) provides a full set of configuration options available in Code-First.
+**Note:** Data annotations only give you a subset of configuration options. [Fluent API](https://www.entityframeworktutorial.net/code-first/fluent-api-in-code-first.aspx) provides a full set of configuration options available in Code-First.
 
 
 ## System.ComponentModel.DataAnnotations Attributes
@@ -560,7 +560,7 @@ In the above code, the `Required` attribute is applied to the StudentName proper
 
 Now, if you try to save the `Student` entity without assigning a value to the `StudentName` property then EF 6 will throw the `System.Data.Entity.Validation.DbEntityValidationException` exception, while EF Core will throw the `Microsoft.EntityFrameworkCore.DbUpdateException` exception.
 
-**Note:** The `Required` attribute can also be used with ASP.Net MVC as a validation attribute. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+**Note:** The `Required` attribute can also be used with ASP.Net MVC as a validation attribute. Visit [Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
 
 ## MaxLength Attribute in EF 6 & EF Core
 The MaxLength attribute specifies the maximum length of data value allowed for a property which in turn sets the size of a corresponding column in the database. It can be applied to the `string` or `byte[]` properties of an entity.
@@ -582,7 +582,7 @@ In the above example, the `MaxLength(50)` attribute is applied on the `StudentNa
 
 Entity Framework also validates the value of a property for the `MaxLength` attribute if you set a value higher than the specified size. For example, if you set more than 50 characters long string value, then EF 6 will throw `System.Data.Entity.Validation.DbEntityValidationException` and EF Core will throw `Microsoft.EntityFrameworkCore.DbUpdateException`.
 
-**Note:** The MaxLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+**Note:** The MaxLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit [Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
 
 
 ## StringLength Attribute in EF 6 & EF Core
@@ -604,7 +604,7 @@ As you can see in the above code, we have applied the `StringLength` attribute t
 
 Entity Framework also validates the value of a property for the `StringLength` attribute if you set a value higher than the specified size. For example, if you set the string value to more than 50 characters, then EF 6 will throw `System.Data.Entity.Validation.DbEntityValidationException` and EF Core will throw `Microsoft.EntityFrameworkCore.DbUpdateException`.
 
-**Note:** The StringLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+**Note:** The StringLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit [Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
 
 
 ## Timestamp Attribute in EF 6 & EF Core
@@ -803,4 +803,4 @@ WHERE (([StudentId] = @1) AND ([StudentName] = @2))
 ',N'@0 nvarchar(max) ,@1 int,@2 nvarchar(max) ',@0=N'Steve',@1=1,@2=N'Bill'
 go            
 ```
-**Note:** The ![Timestamp](https://www.entityframeworktutorial.net/code-first/TimeStamp-dataannotations-attribute-in-code-first.aspx) attribute can only be applied to a single byte array property, whereas the ConcurrencyCheck attribute can be applied to any number of properties with any data type.
+**Note:** The [Timestamp](https://www.entityframeworktutorial.net/code-first/TimeStamp-dataannotations-attribute-in-code-first.aspx) attribute can only be applied to a single byte array property, whereas the ConcurrencyCheck attribute can be applied to any number of properties with any data type.
