--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/6. Fluent API.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/6. Fluent API.md
@@ -1,7 +1,7 @@
 # Fluent API Configurations in EF 6
-Entity Framework Fluent API is used to configure domain classes to override conventions. EF Fluent API is based on a Fluent API design pattern (a.k.a ![Fluent Interface](https://en.wikipedia.org/wiki/Fluent_interface)) where the result is formulated by ![method chaining](https://en.wikipedia.org/wiki/Method_chaining).
+Entity Framework Fluent API is used to configure domain classes to override conventions. EF Fluent API is based on a Fluent API design pattern (a.k.a [Fluent Interface](https://en.wikipedia.org/wiki/Fluent_interface)) where the result is formulated by [method chaining](https://en.wikipedia.org/wiki/Method_chaining).
 
-In Entity Framework 6, the ![DbModelBuilder](https://learn.microsoft.com/en-us/dotnet/api/system.data.entity.dbmodelbuilder?redirectedfrom=MSDN&view=entity-framework-6.2.0) class acts as a Fluent API using which we can configure many different things. It provides more options of configurations than Data Annotation attributes.
+In Entity Framework 6, the [DbModelBuilder](https://learn.microsoft.com/en-us/dotnet/api/system.data.entity.dbmodelbuilder?redirectedfrom=MSDN&view=entity-framework-6.2.0) class acts as a Fluent API using which we can configure many different things. It provides more options of configurations than Data Annotation attributes.
 
 To write Fluent API configurations, override the `OnModelCreating()` method of `DbContext` in a context class, as shown below.
 
@@ -116,7 +116,7 @@ As you can see in the above example, we mapped some properties of the `Student` 
 
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/multiple-table-mapping-fluentapi.png)
 
-The `Map()` method requires a delegate method parameter. You can pass an ![Action delegate](https://www.tutorialsteacher.com/csharp/csharp-action-delegate) or a ![lambda expression](https://www.tutorialsteacher.com/linq/linq-lambda-expression) in the `Map()` method, as shown below:
+The `Map()` method requires a delegate method parameter. You can pass an ![Action delegate](https://www.tutorialsteacher.com/csharp/csharp-action-delegate) or a [lambda expression](https://www.tutorialsteacher.com/linq/linq-lambda-expression) in the `Map()` method, as shown below:
 
 ```cs
 using System.Data.Entity.ModelConfiguration.Configuration;
