--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/7. One-to-One.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/7. One-to-One.md
@@ -26,14 +26,14 @@ public class StudentAddress
 }
 ```
 
-Visit the ![Entity Relationship](https://www.entityframeworktutorial.net/entity-relationships.aspx) section to understand how EF manages one-to-one, one-to-many, and many-to-many relationships.
+Visit the [Entity Relationship](https://www.entityframeworktutorial.net/entity-relationships.aspx) section to understand how EF manages one-to-one, one-to-many, and many-to-many relationships.
 
 A one-to-zero-or-one relationship happens when a primary key of one table becomes PK & FK in another table in a relational database such as SQL Server. So, we need to configure the above entities in such a way that EF creates the `Students` and `StudentAddresses` tables in the DB and makes the `StudentId` column in `Student` table as PrimaryKey (PK) and `StudentAddressId` column in the `StudentAddresses` table as PK and ForeignKey (FK) both.
 
 ## Configure One-to-Zero-or-One Relationship using Data Annotation Attributes
 Here, we will apply data annotation attributes on the `Student` and `StudentAddress` entities to establish a one-to-zero-or-one relationship.
 
-The `Student` entity follows the default ![code-first convention](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) as it includes the `StudentId` property which will be the key property. So, we don't need to apply any attributes on it because EF will make the `StudentId` column as a PrimaryKey in the `Students` table in the database.
+The `Student` entity follows the default [code-first convention](https://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx) as it includes the `StudentId` property which will be the key property. So, we don't need to apply any attributes on it because EF will make the `StudentId` column as a PrimaryKey in the `Students` table in the database.
 
 For the `StudentAddress` entity, we need to configure the `StudentAddressId` as PK & FK both. The `StudentAddressId` property follows the default convention for primary key. So, we don't need to apply any attribute for PK. However, we also need to make it a foreign key which points to `StudentId` of the `Student` entity. So, apply `[ForeignKey("Student")]` on the `StudentAddressId` property which will make it a foreign key for the `Student` entity, as shown below:
 
@@ -102,7 +102,7 @@ protected override void OnModelCreating(DbModelBuilder modelBuilder)
 ```
 In the above example, `modelBuilder.Entity<Student>().HasRequired(s => s.Address)` makes the `Address` property of `StudentAddress` as required and `.WithRequiredPrincipal(ad => ad.Student)` makes the `Student` property of the `StudentAddress` entity as required. Thus it configures both ends as required. So now, when you try to save the `Student` entity without the `StudentAddress` entity without the `Student`, it will throw an exception.
 
-Create a read-only Entity Data Model for the above example using ![EF Power Tools](https://www.entityframeworktutorial.net/code-first/entity-framework-power-tools.aspx). The entities will appear like the diagram shown below:
+Create a read-only Entity Data Model for the above example using [EF Power Tools](https://www.entityframeworktutorial.net/code-first/entity-framework-power-tools.aspx). The entities will appear like the diagram shown below:
 
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/onetoone-2.PNG)
 
