--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/8. One-to-Many.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/8. One-to-Many.md
@@ -52,7 +52,7 @@ In the above example, the `Student` class includes a reference navigation proper
 
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/onetomany-1.PNG)
 
-Notice that the reference property is nullable, so it creates a nullable foreign key column `Grade_GradeId` in the `Students` table. You can ![configure NotNull foreign key using fluent API](https://www.entityframeworktutorial.net/code-first/configure-one-to-many-relationship-in-code-first.aspx#notnull-foreignkey-using-fluent-api).
+Notice that the reference property is nullable, so it creates a nullable foreign key column `Grade_GradeId` in the `Students` table. You can [configure NotNull foreign key using fluent API](https://www.entityframeworktutorial.net/code-first/configure-one-to-many-relationship-in-code-first.aspx#notnull-foreignkey-using-fluent-api).
 
 ## Convention 2
 Another convention is to include a collection navigation property in the principal entity as shown below.
