--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/9. Many-to-Many.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/9. Many-to-Many.md
@@ -1,7 +1,7 @@
 # Configure Many-to-Many Relationships in Code-First
 Here, we will learn how to configure a Many-to-Many relationship between the `Student` and `Course` entity classes. `Student` can join multiple courses and multiple students can join one `Course`.
 
-Visit the ![Entity Relationship](https://www.entityframeworktutorial.net/entity-relationships.aspx) chapter to understand how EF manages one-to-one, one-to-many and many-to-many relationships between entities.
+Visit the [Entity Relationship](https://www.entityframeworktutorial.net/entity-relationships.aspx) chapter to understand how EF manages one-to-one, one-to-many and many-to-many relationships between entities.
 
 ## Many-to-Many Relationship by Following Conventions
 EF 6 includes default conventions for many-to-many relationships. You need to include a collection navigation property at both ends. For example, the `Student` class should have a collection navigation property of `Course` type, and the `Course` class should have a collection navigation property of `Student` type to create a many-to-many relationship between them without any configuration, as shown below:
